<resources>
    <string name="app_name">Doc Reconciliation App</string>
    <string name="add_patients">Add Patients</string>
    <string name="patients_list">Patient Lists</string>
    <string name="patient_title">Patient</string>
    <string name="btn_save">Save</string>
    <string name="date">Date :</string>
    <string name="hospital">Hospital :</string>
    <string name="amount">Amount :</string>
    <string name="payments">Payments :</string>
    <string name="text_amount">ksh. 00.0</string>
    <string name="checkBox_cash">Cash</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register Here!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string-array name="hospital_list">
        <item>Mediheal Hospital</item>
        <item>Reale Hospital</item>
        <item>St. Luke Hospital</item>
        <item>Eldoret Hospital</item>
        <item>Fountain Hospital</item>
        <item>Alexandria Cancer Centre</item>
        <item>Cherangani Nursing Home</item>
    </string-array>

    <string-array name="insurance_list">
        <item>AON</item>
        <item>Britam</item>
        <item>Resolution Health</item>
        <item>ICEA</item>
        <item>ISC</item>
        <item>Moi University</item>
        <item>Pan-Afric</item>
        <item>AAR Insurance</item>
    </string-array>
</resources>
